<resources>
    <string name="app_name">StudyBuddies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_group">Create Group</string>
    <string name="placeholderval">placeholderval</string>
    <string name="click_here_to_generate_group">Click here to generate group</string>
    <string name="title_activity_get_user_from_serve">GetUserFromServe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">button</string>
    <string name="enter_information_for_user">Enter information for user</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_username">Enter username</string>

    <string name="enter_password">Enter password</string>
    <string name="response_will_be_shown_below">Response will be shown below</string>
    <string name="create">Create</string>
    <string name="show_users">Show Users</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="show">show</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_information_to_create_a_new_account">Enter information to create a new account!</string>
    <string name="enter_e_mail_address">Enter e-mail address</string>
    <string name="enter_location">Enter location</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_account_information">Enter your account information</string>

    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string-array name="sortBy_array">
        <item>Sort By (select one)</item>
        <item>Group Name</item>
        <item>Member Count</item>
        <item>(To do)</item>
    </string-array>
    <string name="here_is_a_totally_short_and_not_long_winded_description_of_your_group_that_hasnt_been_implemented_yet_this_description_will_fill_up_this_area_and_be_displayed_beneath_the_group_name_this_is_where_groups_will_write_a_short_desctiption_about_their_group_in_case_people_need_to_know_something_before_joining_thank_you_for_taking_the_time_to_read_all_of_this_filler_text">Here is a totally short and not long winded description of your group that hasn\'t been implemented yet. This description will fill up this area and be displayed beneath the group name. This is where groups will write a short description about their group in case people need to know something before joining. Thank you for taking the time to read all of this filler text.</string>
</resources>