<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUser"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:text="Enter information to create a new account!"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/greyText"
        />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="Enter username"
        android:outlineAmbientShadowColor="@color/darkButton"
        android:textColorHint="@color/greyText"
        app:layout_constraintBottom_toTopOf="@id/email_address"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Enter e-mail address"
        android:textColorHint="@color/greyText"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/password_one"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/password_one"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColorHint="@color/greyText"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/password_two"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/password_two"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_again"
        android:textColorHint="@color/greyText"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/location"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_one"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Enter location"
        android:textColorHint="@color/greyText"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/create_button"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_two"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/error_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_button"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkButton"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_button"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkButton"
        android:text="LOGIN"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>